--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 	def espressoVersion = '3.0.2'
 	androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
 	androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+	androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
 	androidTestImplementation "tools.fastlane:screengrab:1.1.0"
 	androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:2.0.2"
 	androidTestCompileOnly 'javax.annotation:jsr250-api:1.0'
